add buttons to menu

--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html>
 <head>
 	<title>Calendar</title>
-
+	
+	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+	
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
 </head>
 <body>
 
 <div id="wrapper">
-	test
+	<div id="nav">
+
+		<div class="buttons left">
+			<button class="radius">Добавить</button>
+			<button class="radius">Обновить</button>			
+		</div>
+
+		<div class="search right">
+			search
+		</div>
+
+		<div class="clear"></div>
+
+	</div
 </div>
 
 </body>
