end of menu design

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 		</div>
 
 		<div class="search right">
-			search
+			<img src="img/icon.png"/>
+			<input type="text" placeholder="Событие, дата или участник" class="radius">
 		</div>
 
 		<div class="clear"></div>
 
-	</div
+	</div>
+
+	<div id="panel">
+	</div>
 </div>
 
 </body>
