add month layer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<link rel="stylesheet" type="text/css" href="css/panel.css">
 </head>
 <body>
 
@@ -28,6 +29,24 @@
 	</div>
 
 	<div id="panel">
+
+		<ul class="month">
+			<li class="left">
+				<button class="radius">
+					<img src="img/left.png"/>
+				</button>
+			</li>
+			<li class="month-title left">Март 2013</li>
+			<li class="left">
+				<button class="radius">
+					<img src="img/right.png"/>
+				</button>
+			</li>
+			<li class="left">
+				<button class="radius">Cегодня</button>
+			</li>
+		</ul>
+
 	</div>
 </div>
 
