--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
 	<link rel="stylesheet" type="text/css" href="css/panel.css">
+	<link rel="stylesheet" type="text/css" href="css/calendar.css">
 </head>
 <body>
 
@@ -45,7 +46,16 @@
 			<li class="left">
 				<button class="radius">Cегодня</button>
 			</li>
+			<li class="clear"></li>
 		</ul>
+
+		<table id="calendar">
+		</table>
+		<div class="clear"></div>
+
+		<script type="text/javascript" src="js/calendar.js"></script>
+		<script type="text/javascript" src="js/loader.js"></script>
+		<script type="text/javascript" src="js/initialize.js"></script>
 
 	</div>
 </div>
