--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 		<script type="text/javascript" src="js/calendar.js"></script>
 		<script type="text/javascript" src="js/loader.js"></script>
+		<script type="text/javascript" src="js/dater.js"></script>
 		<script type="text/javascript" src="js/initialize.js"></script>
 
 	</div>
