--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 		<ul class="month">
 			<li class="left">
-				<button class="radius">
+				<button id="left-button" class="radius">
 					<img src="img/left.png"/>
 				</button>
 			</li>
 			<li class="month-title left">Март 2013</li>
 			<li class="left">
-				<button class="radius">
+				<button id="right-button" class="radius">
 					<img src="img/right.png"/>
 				</button>
 			</li>
