add listener to go to current date

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</button>
 			</li>
 			<li class="left">
-				<button class="radius">Cегодня</button>
+				<button id="current-button" class="radius">Cегодня</button>
 			</li>
 			<li class="clear"></li>
 		</ul>
