--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 		<script type="text/javascript" src="js/calendar.js"></script>
 		<script type="text/javascript" src="js/loader.js"></script>
 		<script type="text/javascript" src="js/dater.js"></script>
+		<script type="text/javascript" src="js/storage.js"></script>
 		<script type="text/javascript" src="js/initialize.js"></script>
 
 	</div>
