fixing errors with storage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="buttons left">
 			<button class="action radius" id="add-idea">Добавить</button>
 
-			<div class="popup-top radius">
+			<div id="fast-add-idea" class="popup-top radius">
 				<div class="close right">x</div>
 				<div class="clear"></div>
 
