save to storage data with key

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="clear"></div>
 
 				<div class="context">
-					<input type="text" placeholder="5 марта, 14:00, День рождения" class="radius">
+					<input type="text" placeholder="5 марта, 14:00, День рождения" class="radius" name="fast-field" id="fast-field">
 					<button class="shift-top empty create">Создать</button>
 				</div>
 
