add design for popup

--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
 		</table>
 		<div class="clear"></div>
 
+		<div id="popup-left" class="radius">
+			<div class="close right">x</div>
+			<div class="clear"></div>
+			
+			<div class="context">
+				<input type="text" placeholder="Событие">
+				<input type="text" placeholder="День, месяц, год">
+				<input type="text" placeholder="Имена участников">
+				<textarea placeholder="Описание" class="radius">
+					
+				</textarea>
+				<button class="shift-top empty create" id="create-full-idea">Готово</button>
+				<button class="shift-top empty create" id="delete-full-idea">Удалить</button>
+			</div>			
+		</div>
+
 		<script type="text/javascript" src="js/calendar.js"></script>
 		<script type="text/javascript" src="js/loader.js"></script>
 		<script type="text/javascript" src="js/dater.js"></script>
