--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			
 			<div class="context">
 				<input type="text" placeholder="Событие">
-				<input type="text" placeholder="День, месяц, год">
+				<h5 id="date-of-calendar">5 марта</h5>
 				<input type="text" placeholder="Имена участников">
 				<textarea placeholder="Описание" class="radius">
 					
