--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
 			<div class="clear"></div>
 			
 			<div class="context">
-				<input type="text" placeholder="Событие">
+				<h2 id="message-of-calendar"></h2>
+				<input type="text" placeholder="Событие" id="message-full" name="message-full">				
 				<h5 id="date-of-calendar">5 марта</h5>
-				<input type="text" placeholder="Имена участников">
-				<textarea placeholder="Описание" class="radius">
-					
-				</textarea>
+				<input type="text" placeholder="Имена участников" id="people-full" name="people-full">
+				<div id="people-of-calendar"></div>
+				<textarea placeholder="Описание" class="radius" id="description-full" name="description-full"></textarea>
+				<div id="description-of-calendar"></div>
+
 				<button class="shift-top empty create" id="create-full-idea">Готово</button>
 				<button class="shift-top empty create" id="delete-full-idea">Удалить</button>
 			</div>			
